# RayLib-Game

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md
include/: ball.h  goalie.h  paddle.h
src/: ball.cpp  goalie.cpp  main.cpp  paddle.cpp
